Improve Torrent meta-info decoding
Fully decode the torrent meta-info structure, including more optional
fields such as creation date, comment, and more importantly announce
lists in preparation of the support of BEP#0012 for multi-tracker
support.

Signed-off-by: Maxime Petazzoni <mpetazzoni@turn.com>